sumo/tests/sumo/errors/routes/repeat_noperiod/errors.sumo
Error: The attributes 'period' and 'repno' have to be given both in the definition of '0'.
Quitting (on error).
